--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\april\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\april\\python.exe",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
+    "python.linting.flake8Enabled": false,
+    "python.linting.mypyEnabled": false
 }
